--- a/adv.html
+++ b/adv.html
@@ -210,7 +210,7 @@
 	<script src="http://news.sohu.com/upload/yursile/js/preload.min.js" type="text/javascript"></script>	
     <script type="text/javascript" src="http://news.sohu.com/upload/yursilewrj1119/lib/swiper.min.js"></script>
     <!-- <script src="http://news.sohu.com/upload/yursile/js/adv.min.js" type="text/javascript"></script>-->
-	<script type="text/javascript" src="./adv.js"></script>
+	<script type="text/javascript" src="./adv.min.js"></script>
 </head>
 <body ontouchmove="event.preventDefault()">
 
